--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
 <body>
   <div align="center">
     <h1>Congratulations UMBC!</h1>
-    <h2>You have successfully created a pipeline for a demo that retrieved this source application from an Amazon S3 bucket and deployed it 
+    <h2>You have successfully created a pipeline that retrieved this source application from GitHub and deployed it to one Amazon EC2 instance using AWS Elastic Beanstalk. You’re one step closer to practicing continuous deployment!
+
+You have successfully created a pipeline for a demo that retrieved this source application from an Amazon S3 bucket and deployed it 
 	to three Amazon EC2 instances using AWS CodeDeploy.</h2>
     <p>For next steps, read the AWS CodePipeline Documentation.</p>
   </div>
